terraform/infrastructure/modules/vpc/main.tf
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = {
    Name = "${var.project_name}-vpc"
    "kubernetes.io/cluster/${var.project_name}" = "shared"
  }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags   = { Name = "${var.project_name}-igw" }
}

resource "aws_subnet" "public" {
  count                   = length(var.public_subnets)
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_subnets[count.index]
  availability_zone       = var.availability_zones[count.index]
  map_public_ip_on_launch = true
  tags = {
    Name                     = "${var.project_name}-public-${count.index + 1}"
    "kubernetes.io/role/elb" = "1"
  }
}

resource "aws_subnet" "private" {
  count             = length(var.private_subnets)
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.private_subnets[count.index]
  availability_zone = var.availability_zones[count.index]
  tags = {
    Name                              = "${var.project_name}-private-${count.index + 1}"
    "kubernetes.io/role/internal-elb" = "1"
  }
}

resource "aws_eip" "nat" { 
  domain = "vpc"
 tags = { Name = "${var.project_name}-nat-eip" } 
 }
resource "aws_nat_gateway" "main" { 
  allocation_id = aws_eip.nat.id
 subnet_id = aws_subnet.public[0].id
  tags = { Name = "${var.project_name}-nat" } 
  }

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route  { 
    cidr_block = "0.0.0.0/0"
   gateway_id = aws_internet_gateway.main.id 
   }
  tags   = { Name = "${var.project_name}-public-rt" }
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
  route  { 
    cidr_block = "0.0.0.0/0"
   nat_gateway_id = aws_nat_gateway.main.id 
   }
  tags   = { Name = "${var.project_name}-private-rt" }
}

resource "aws_route_table_association" "public"  { 
  count = length(aws_subnet.public)
 subnet_id = aws_subnet.public[count.index].id
   route_table_id = aws_route_table.public.id 
   }
resource "aws_route_table_association" "private" { 
  count = length(aws_subnet.private)
 subnet_id = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id 
  }

output "vpc_id"             { value = aws_vpc.main.id }
output "public_subnet_ids"  { value = aws_subnet.public[*].id }
output "private_subnet_ids" { value = aws_subnet.private[*].id }
